--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -11,7 +11,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Navbar</a>
       
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -21,8 +21,8 @@
           
           </ul>
           <form class="form-inline my-2 my-lg-0">
-            <button class="btn btn-outline-info mr-sm-2" type="button">Log In</button>
-            <button class="btn btn-outline-success my-2 my-sm-0">Sign Up</button>
+            <button class="btn btn-outline-info mr-sm-2" type="button"><a href="{% url 'login' %}">Log In</button></a>
+            <button class="btn btn-outline-success my-2 my-sm-0"><a href="{% url 'signup' %}">Sign Up</button></a>
           </form>
         </div>
       </nav>
