--- a/core/templates/core/signup.html
+++ b/core/templates/core/signup.html
@@ -1,3 +1,13 @@
 {% include 'core/base.html' %} 
 
 <h1 class="m-3 text-center">SIGN UP HERE</h1>
+
+<form action="" method="post" class="m-auto" style="background-color: greenyellow;">
+    {% csrf_token %}
+    <div class="text-center">
+    {{form.as_p}}
+   
+    
+    <input type="submit">
+    </div>
+</form>
