--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat App</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <style>
+      a,a:hover{
+        text-decoration: none;
+        color: #fff;
+      }
+    </style>
 </head>
 <body style="background-color: gainsboro;">
 
@@ -18,14 +24,24 @@
       
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            
             <li class="nav-item active">
-              <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+              {% if request.user.is_authenticated %}
+              <a class="nav-link" href="{% url 'home' %}">Welcome {{request.user.username|capfirst }}</span></a>
+              {% endif %}
             </li>
           
           </ul>
           <form class="form-inline my-2 my-lg-0">
-            <button class="btn btn-outline-info mr-sm-2" type="button"><a href="{% url 'login' %}">Log In</button></a>
-            <button class="btn btn-outline-success my-2 my-sm-0"><a href="{% url 'signup' %}">Sign Up</button></a>
+            {% if request.user.is_authenticated %}
+              <a href="{% url 'rooms' %}" class="mr-3">Rooms</a>
+              <a href="{% url 'logout' %}" class="btn btn-outline-info mr-sm-2" type="button">Log Out</a>
+
+            {% else %}
+              <a href="{% url 'login' %}" class="btn btn-outline-info mr-sm-2" type="button">Log In</a>
+              <a href="{% url 'signup' %}" class="btn btn-outline-success my-2 my-sm-0">Sign Up</a>
+            {% endif %}
+            
           </form>
         </div>
       </nav>
