--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -10,6 +10,12 @@
         text-decoration: none;
         color: #fff;
       }
+      .center-div {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+    }
     </style>
 </head>
 <body style="background-color: gainsboro;">
