--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -55,7 +55,9 @@
       {% if messages %}
       <div class="alert alert-warning alert-dismissible fade show" role="alert">
         {% for message in messages %}
-            {{message}}
+          {% if forloop.last %}
+              {{ message }}
+          {% endif %}
         {% endfor %}          
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
           <span aria-hidden="true">&times;</span>
