add falsh message

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -16,6 +16,16 @@
         justify-content: center;
         height: 100vh;
     }
+    #chat-messages {
+      height: 400px;
+      overflow-y: auto;
+    }
+    .custom-li {
+      border-radius: 10px;
+      background-color: white;
+      padding: 10px;
+      border: 1px solid black;
+    }
     </style>
 </head>
 <body style="background-color: gainsboro;">
