--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -17,14 +17,13 @@
         height: 100vh;
     }
     #chat-messages {
-      height: 400px;
+      height: 300px;
       overflow-y: auto;
     }
     .custom-li {
-      border-radius: 10px;
-      background-color: white;
-      padding: 10px;
-      border: 1px solid black;
+      padding: 10px 5px;
+      margin: 10px 50px;
+  
     }
     </style>
 </head>
