--- a/rooms/templates/rooms/room_list.html
+++ b/rooms/templates/rooms/room_list.html
@@ -25,7 +25,7 @@
                 <div class="card">
                     <div class="card-body">
                     <h5 class="card-title text-center mb-4 text-secondary">{{ room.name }}</h5>
-                    <a class="nav-link btn btn-outline-primary mt-5" href="{% url 'room_detail' room.slug %}">View Room</a>
+                    <a class="nav-link btn btn-outline-primary mt-5" href="{% url 'room_detail' room.slug %}">Join Room</a>
                     <!-- Additional card content -->
                     </div>
                 </div>
